# slapItTogether

./: CMakeLists.txt
include/glAbstractions/: program.hpp  vertexBuffer.hpp
include/utils/: file.hpp
resources/shaders/: fragmentShader.glsl  vertexShader.glsl
src/: main.cpp
src/glAbstractions/: program.cpp  vertexBufferTFloat.cpp
src/utils/: file.cpp
